--- a/CSS/ProductList.css
+++ b/CSS/ProductList.css
@@ -53,7 +53,7 @@ ul li ul.dropdown {
   background: white;
   display: none;
   position: absolute;
-  z-index: 999;
+  z-index: 1;
   left: 0;
   font-family: Oxygen;
   padding: 10px 10px;
@@ -799,8 +799,28 @@ ul li ul.dropdown li {
     padding: 0px 10px;
     text-align: center;
   }
+  .main > .main-content > .filter {
+    display: none;
+  }
+  .main-content > div > .heading > .size > form > label {
+    display: none;
+  }
+  .main-content > div > .heading > .size > form > select {
+    display: none;
+  }
 }
-@media screen and (orientation: portrait) {
+@media (max-width: 800px) and (min-width: 100px) {
+  .main-content > div > .product-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 5px;
+    padding: 0px 10px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 500px) {
   .main > .main-content {
     display: flex;
     flex-direction: column;
@@ -811,13 +831,6 @@ ul li ul.dropdown li {
     display: flex;
     flex-direction: column;
     width: 100%;
-  }
-  .main-content > div > .product-list {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 5px;
-    padding: 0px 10px;
-    text-align: center;
   }
 
   /* .main-content > div > .product-list {
